# detr_onnx_tensorrt

./: .gitignore  README.md
python/: onnx_exporter.py
python/detr/: backbone.py  detr.py  hubconf.py  position_encoding.py  segmentation.py
tensorrt/dependencies/: opencv_install.sh
tensorrt/src/: CMakeLists.txt  calibrator.cpp  cuda_utils.h  detect.cpp  detr.cpp  detr.h  engine.cpp  infer.cpp  onnx_trt_convert.cpp  postprocess.cpp  utils.h  write_objects.cpp
